Fixed spacing issues

--- a/styles.css
+++ b/styles.css
@@ -33,9 +33,9 @@ h1 { margin: 0; }
 
 h1, h2 { font-size: 1.2rem; }
 
-h3 {
+h3 {	
+	margin: auto;
 	font-size: 1.08rem;
-	margin-bottom: 8px;
 	font-weight: normal;
 	display: inline-block;
 }
